Fix template blocks paddings on small screens

--- a/varia/sass/full-site-editing/_editor.scss
+++ b/varia/sass/full-site-editing/_editor.scss
@@ -4,7 +4,7 @@
 .template-block {
 	.site-header,
 	.site-footer {
-		padding: #{map-deep-get($config-global, "spacing", "unit")} 0;
+		padding: #{map-deep-get($config-global, "spacing", "unit")};
 	
 		@include media(mobile) {
 			padding: #{map-deep-get($config-global, "spacing", "vertical")} 0;
